Added correct error message on non-public form link. Implemented more lombok annotations. Put requestId into code mode for easier copying. Some other small changes (without logic changes).